# option_pricing_library

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
client/include/: Client.hpp
client/src/: Client.cpp
config/: client_config.json  server_config.json
include/: PricingEngine.hpp
include/models/: BermudanOption.hpp  BinomialTree.hpp  BlackScholes.hpp  FiniteDifference.hpp  LeastSquaresMonteCarlo.hpp  MonteCarlo.hpp
include/server/: Server.hpp
include/utils/: Logger.hpp  MathUtils.hpp
scripts/: build_and_run.sh  deploy_to_aws.sh  run_tests.sh
src/: main.cpp
src/models/: BermudanOption.cpp  BinomialTree.cpp  BlackScholes.cpp  FiniteDifference.cpp  LeastSquaresMonteCarlo.cpp  MonteCarlo.cpp
src/server/: Server.cpp  ServerMain.cpp
src/utils/: Logger.cpp  MathUtils.cpp
test/client/: ClientTest.cpp
test/models/: BinomialTreeTest.cpp  BlackScholesTest.cpp  FiniteDifferenceTest.cpp  LeastSquaresMonteCarloTest.cpp  MonteCarloTest.cpp
test/server/: ServerTest.cpp
test/utils/: MathUtilsTest.cpp
